@@ -3,18 +3,15 @@ package creatorplatform.infra;
 import creatorplatform.domain.*;
 import java.util.List;
 import java.util.Optional;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
 
 //<<< Clean Arch / Inbound Adaptor
 
 @RestController
-@RequestMapping(value="/products")
+// @RequestMapping(value="/products")
 @Transactional
 public class ProductsController {
 
@@ -29,12 +26,11 @@ public class ProductsController {
     public void trackView(
         @PathVariable(value = "id") Long id,
         @RequestBody TrackViewCommand trackViewCommand
-)   throws Exception {
-        System.out.println("##### /products/trackView  called #####");
+    ) throws Exception {
+        System.out.println("##### /products/trackView called #####");
         Optional<Products> optionalProducts = productsRepository.findById(id);
 
-        optionalProducts.orElseThrow(() -> new Exception("No Entity Found"));
-        Products products = optionalProducts.get();
+        Products products = optionalProducts.orElseThrow(() -> new Exception("No Entity Found"));
         products.trackView(trackViewCommand);
 
         productsRepository.save(products);
@@ -65,7 +61,6 @@ public class ProductsController {
         return getProductsByCategory("기타");
     }
 
-    // 공통 로직
     private List<ProductSummaryDto> getProductsByCategory(String category) {
         List<Products> productsList = productsRepository.findByCategory(category);
         return productsList.stream()
@@ -78,9 +73,8 @@ public class ProductsController {
                 p.getPublishedAt(),
                 p.getIsBestseller()
             ))
-            .toList();
+            .collect(Collectors.toList());
     }
-
 
     @GetMapping("/bestsellers")
     public List<ProductSummaryDto> getBestSellers() {
@@ -92,11 +86,10 @@ public class ProductsController {
                 p.getAuthorNickname(),
                 p.getTitle(),
                 p.getPublishedAt(),
-                p.getIsBestseller() 
+                p.getIsBestseller()
             ))
-            .toList();
+            .collect(Collectors.toList());
     }
-
 
     @GetMapping("/{id}")
     public ProductDetailDto getProductDetail(@PathVariable Long id) throws Exception {
@@ -133,7 +126,6 @@ public class ProductsController {
     @GetMapping("/all")
     public List<ProductSummaryDto> getAllProductsSorted() {
         List<Products> productsList = productsRepository.findAllByOrderByIsBestsellerDescPublishedAtDesc();
-
         return productsList.stream()
             .map(p -> new ProductSummaryDto(
                 p.getId(),
@@ -144,13 +136,7 @@ public class ProductsController {
                 p.getPublishedAt(),
                 p.getIsBestseller()
             ))
-            .toList();
+            .collect(Collectors.toList());
     }
-
-
-
-
-
-
 }
 //>>> Clean Arch / Inbound Adaptor
